k3s_cluster/base/dmz/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-media-qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-media-qbittorrent
  template:
    metadata:
      labels:
        app: dmz-media-qbittorrent
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 8080
              name: web
            - containerPort: 6881
              name: peer-tcp
              protocol: TCP
            - containerPort: 6881
              name: peer-udp
              protocol: UDP
          volumeMounts:
            - name: media-storage
              mountPath: /config
              subPath: qbittorrent/config
            - name: media-storage
              mountPath: /downloads
              subPath: downloads/qbittorrent
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
