k3s_cluster/base/dmz/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-qbittorrent
spec:
  type: ClusterIP
  selector:
    app: dmz-media-qbittorrent
  ports:
    - name: web
      protocol: TCP
      port: 6661
      targetPort: 8080
      # - name: tcp-incoming
      #   port: 6662
      #   protocol: TCP
      #   targetPort: 6881
      # - name: udp-incoming
      #   port: 6662
      #   protocol: UDP
      #   targetPort: 6881
